Debugger: Fix spurious cppcheck warning in reformatCharacter

The code path is never taken, size == 4 only happens in conjunction
with isSigned == false.

Task-number: QTCREATORBUG-17632
Change-Id: I3fd5a08fd5e414690bccf487f9d3cfb704ab5e47
Reviewed-by: Robert Loehning <robert.loehning@qt.io>